--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,66 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+* {
+  font-family: 'Barlow Condensed';
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+/* Header begins */
+
+.container {
+  margin: 0rem;
+  background-color: red;
+  display: flex;
+  align-items: center;
+  align-items: baseline;
+  justify-content: center;
+  flex-wrap: nowrap;
+  margin-left: 1rem;
+  gap: 100px;
+  background-color: #0F222D;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form-control {
+  flex-shrink: 2;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.Logo {
+  height: auto;
+  max-width: 100%;
 }
 
-.card {
-  padding: 2em;
+a {
+  /* font-family: 'Barlow Condensed'; */
+  font-size: 1.2rem;
 }
 
-.read-the-docs {
-  color: #888;
+a:link {
+  color: #EBE7D9;
+  text-decoration: none;
 }
+
+a:visited {
+  color: #EBE7D9;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #F55139;
+  text-decoration: underline;
+}
+
+a:active {
+  color: #F55139;
+  text-decoration: underline;
+}
+
+button {
+  padding: 12px 10px;
+  font-size: 14px;
+}
+
+/* Header Stops */
+
+/* Footer Begins */
+.footer {
+  background-color: #0F222D;
+}
+
+/* Footer Ends */
