--- a/src/App.css
+++ b/src/App.css
@@ -158,6 +158,7 @@ button {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  flex-direction: row;
 
 }
 
@@ -191,6 +192,19 @@ button {
   object-fit: contain;
 }
 
+.container-search {
+  padding: 4px 4px;
+  max-width: 500px;
+  margin: auto;
+}
+
+
+
+
+
+
+
+
 /* Category buttons */
 .col-cat {
   display: flex;
@@ -210,3 +224,62 @@ button {
 /* Category buttons */
 
 /* Shop page ends */
+
+/* Login Page begins */
+.login {
+  width: 100%;
+  min-height: 80vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.login-inputs {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+
+}
+
+input {
+  padding: 10px;
+  width: 300px;
+  border: 1px solid #0F222D;
+  margin: 10px 0;
+}
+
+small {
+  color: red;
+}
+
+.login-btn {
+  padding: 10px;
+  width: 300px;
+  border: 1px solid #EBE7D9;
+  background-color: #0F222D;
+  color: #F55139;
+}
+
+/* Login Page Ends */
+/* About page begins */
+.about-text {
+  position: absolute;
+  top: 20px;
+  left: 16px;
+  color: #0F222D;
+  font-size: 5rem;
+  padding: 30px;
+}
+
+.about-img {
+  background: url(./images/about-page.jpg);
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+}
+
+/* About page Ends */
